example/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-apiserver
  namespace: shoot--dev--kind
  annotations:
    gardener.cloud/description: |
      Allows Ingress from the Shoot's Kubernetes API Server to pods labeled with 'networking.gardener.cloud/from-apiserver=allowed'
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: kubernetes
          role: apiserver
  podSelector:
    matchLabels:
      networking.gardener.cloud/from-apiserver: allowed
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-dind-node
  namespace: shoot--dev--kind
  annotations:
    gardener.cloud/description: |
      Allows Egress to Mock Nodes from pods labeled with 'networking.gardener.cloud/to-shoot-networks=allowed'
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          worker: kind-cpu-worker
  podSelector:
    matchLabels:
      networking.gardener.cloud/to-shoot-networks: allowed
  policyTypes:
  - Egress
